Update Decompression Fallbackを有効に設定

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/UniMSLibWebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/UniMSLibWebGL.data.gz",
-        frameworkUrl: buildUrl + "/UniMSLibWebGL.framework.js.gz",
-        codeUrl: buildUrl + "/UniMSLibWebGL.wasm.gz",
+        dataUrl: buildUrl + "/UniMSLibWebGL.data.unityweb",
+        frameworkUrl: buildUrl + "/UniMSLibWebGL.framework.js.unityweb",
+        codeUrl: buildUrl + "/UniMSLibWebGL.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "UniMFramework",
