--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | UniMFramework</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" type="image/png">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
